fixed(ekuiper):Tip box is covered

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -95,7 +95,7 @@ label {
 
 .header {
   position: fixed;
-  z-index: 2000;
+  z-index: 1;
   top: 0;
   left: 0;
   width: 100%;
